--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
    
        <form action="{{ url_for('predict_datapoint')}}" method="post">
         <h1>
-            <legend>Student Exam Performance Prediction</legend>
+            <!-- <legend>Student Exam Performance Prediction</legend> -->
         </h1>
         <div class="mb-3">
             <label class="form-label">Gender</label>
@@ -105,7 +105,7 @@
         </div>
     </form>
     <h2>
-       THE  prediction is {{results}}
+       The prediction of Math score is {{results}}
     </h2>
    <body>
 </html>
